--- a/src/components/Products.scss
+++ b/src/components/Products.scss
@@ -6,3 +6,26 @@ html,
     margin: 0;
     padding: 0;
 }
+
+#root {
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    align-items: center;
+    padding: 2em 0;
+    // background-color: rgba(0, 0, 0, 0.15);
+}
+
+.product {
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-areas: 'desc image';
+    align-items: center;
+    padding: 5%;
+    margin: 1em auto;
+    width: 70%;
+    max-width: 600px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.15);
+}
