--- a/src/components/Products.scss
+++ b/src/components/Products.scss
@@ -28,4 +28,29 @@ html,
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 1px 5px 1px rgba(0, 0, 0, 0.15);
+
+    section {
+        p {
+            line-height: 28px;
+          }
+          button {
+            border-style: none;
+            background-color: bisque;
+            color: #444;
+            font-size: 1em;
+            padding: 0.5em 1em;
+            border-radius: 5px;
+            cursor: pointer;
+            &:hover {
+              background-color: #efbe23;
+            }
+          }
+    }
+
+    img {
+        grid-area: image;
+        justify-self: end;
+        width: auto;
+        height: 200px;
+      }
 }
